# HST_LAB

./: .gitignore  README.md
LAB_1/: CMakeLists.txt
LAB_1/client/: gather_data.py
LAB_1/server/: TcpServer.h
LAB_2/: CMakeLists.txt
LAB_2/client/: check.py  gather_data.py  send_data.py
LAB_2/server/: Session.cpp  Session.h  TcpServer.cpp  calculations.cpp  calculations.h  main.cpp
LAB_3/: CMakeLists.txt  HDFUtils.cpp  HDFUtils.h  calculations.cpp  calculations.h  main.cpp
LAB_4/: CMakeLists.txt  HDFUtils.cpp  HDFUtils.h  calculations.cu  calculations.cuh  main.cpp
LAB_5/: CMakeLists.txt  calculations_cpu.cpp  calculations_cpu.h  calculations_gpu.cu  calculations_gpu.cuh  main.cpp
client/: check.py  client.py  gather_data.py  gen_data.py  send_data.py  utils.py
experiment_results/: combine_exp_results.py  pickle_16_thr.pkl  pickle_1_thr.pkl  pickle_20_thr.pkl  pickle_2_thr.pkl  pickle_4_thr.pkl  pickle_8_thr.pkl
server/: Session.cpp  Session.h  calculations.h
